Cyber Security Related Things Added

--- a/index.html
+++ b/index.html
@@ -142,12 +142,8 @@
                             <div class="col-lg-6 col-md-12">
                                 <div class="card-body">
                                     <div class="h4 mt-0 title">About</div>
-                                    <p>Hello! I am Vishnuraaj Balasubramanian, Software Developer. I live in Madurai, my
-                                        objective is to
-                                        associate myself with progressive organization that gives me scope to
-                                        apply my educational and professional skills and provides me with advancement
-                                        opportunity and knowledge empowerment.
-
+                                    <p>Hello! I am Vishnuraaj Balasubramanian, Software Developer. I live in Madurai.I am enthusiastic about CyberSecurity and Love solve problems, provide solutions,  create & follow security guidelines so that I can ensure organization and the people in it were safe.
+                                        I have started my career in one of the SIEM Development organization which led me to be passionate in CyberSecurity. I have got oppertunities to solve security issues to ensure our SIEM tool comply with CIA Triad. 
                                     </p>
                                 </div>
                             </div>
@@ -403,16 +399,33 @@
                                 <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
                                     data-aos-duration="500">
                                     <div class="card-body cc-experience-header">
+                                        <p>February 2021 - Present</p>
+                                        <div class="h5">Zoho Corporation Private Limited</div>
+                                    </div>
+                                </div>
+                                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                    <div class="card-body">
+                                        <div class="h5">Member Technical Staff</div>
+                                        <p class="category">Chennai, Tamil Nadu, India</p>
+                                        <p>I have got opportunities to work on an SIEM tool ManageEngine Log360 and i have been working in Regulatory Compliance and Risk Postures.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="row">
+                                <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
+                                    data-aos-duration="500">
+                                    <div class="card-body cc-experience-header">
                                         <p>December 2019</p>
                                         <div class="h5">Zerone Corps</div>
                                     </div>
                                 </div>
                                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                     <div class="card-body">
-                                        <div class="h5">Intern</div>
+                                        <div class="h5">Web Developer Intern</div>
                                         <p class="category">Madurai</p>
-                                        <p>Got an Wonderful Experience in Zerone corps. In that company I worked on some
-                                            mini projects using Web Development.</p>
+                                        <p>I have got opportunity to work on some web development projects during the internships</p>
                                     </div>
                                 </div>
                             </div>
@@ -435,7 +448,7 @@
                                     <div class="card-body">
                                         <div class="h5">Bachelor of Information Technology</div>
                                         <p class="category">Anna University</p>
-                                        <p>Currenly pursuing Final year in Kamaraj College of Engineering and
+                                        <p>Completed the Graduation in B.Tech Information Technology at Kamaraj College of Engineering and
                                             Technology.</p>
                                     </div>
                                 </div>
@@ -487,41 +500,18 @@
                                 <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
                                     data-aos-duration="500">
                                     <div class="card-body cc-education-header">
-                                        <div class="h5">NIIT</div>
-                                        <p>Issued on June 2017<br>(This certification does not expire)</p>
+                                        <div class="h5">Google</div>
+                                        <p>Issued on May 2023<br>(This certification does not expire)</p>
 
                                     </div>
                                 </div>
                                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                     <div class="card-body">
-                                        <div class="h5">NIIT</div>
-                                        <p class="category">Programming in C</p>
-                                        <p>Credential Id: 18AAZZZZZ7665 <br>
-                                            Grade Achieved: Outstanding<br>
-                                            <a href="https://drive.google.com/file/d/17ufeplQh7rygGLDmlHlVhQtyTWrZtCA8/view?usp=sharing"
-                                                target="_blank">Go
-                                                to Credential</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="row">
-                                <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
-                                    data-aos-duration="500">
-                                    <div class="card-body cc-education-header">
-                                        <div class="h5">NIIT</div>
-                                        <p>Issued on July 2017<br>(This certification does not expire)</p>
-
-                                    </div>
-                                </div>
-                                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                                    <div class="card-body">
-                                        <div class="h5">NIIT</div>
-                                        <p class="category">Programming in Java</p>
-                                        <p>Credential Id: 18AAZZZZZ4262<br>
-                                            Grade Achieved: Good <br>
-                                            <a href="https://drive.google.com/file/d/17gz3rZmcD0i1QLTi0QPFH0nmYn-VlMcS/view?usp=sharing"
+                                        <div class="h5">Foundations of Cybersecurity</div>
+                                        <p class="category">Google</p>
+                                        <p>Credential Id: WWLMVYATC8HA <br>
+                                            Grade Achieved: 100%<br>
+                                            <a href="https://www.coursera.org/account/accomplishments/certificate/WWLMVYATC8HA"
                                                 target="_blank">Go
                                                 to Credential</a></p>
                                     </div>
@@ -568,6 +558,52 @@
                                         <p>Credential Id: JLFUXXHSZH39<br>
                                             Grade Achieved: 96.83% <br>
                                             <a href="https://www.coursera.org/account/accomplishments/verify/JLFUXXHSZH39"
+                                                target="_blank">Go
+                                                to Credential</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="row">
+                                <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
+                                    data-aos-duration="500">
+                                    <div class="card-body cc-education-header">
+                                        <div class="h5">NIIT</div>
+                                        <p>Issued on June 2017<br>(This certification does not expire)</p>
+
+                                    </div>
+                                </div>
+                                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                    <div class="card-body">
+                                        <div class="h5">NIIT</div>
+                                        <p class="category">Programming in C</p>
+                                        <p>Credential Id: 18AAZZZZZ7665 <br>
+                                            Grade Achieved: Outstanding<br>
+                                            <a href="https://drive.google.com/file/d/17ufeplQh7rygGLDmlHlVhQtyTWrZtCA8/view?usp=sharing"
+                                                target="_blank">Go
+                                                to Credential</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="row">
+                                <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
+                                    data-aos-duration="500">
+                                    <div class="card-body cc-education-header">
+                                        <div class="h5">NIIT</div>
+                                        <p>Issued on July 2017<br>(This certification does not expire)</p>
+
+                                    </div>
+                                </div>
+                                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                    <div class="card-body">
+                                        <div class="h5">NIIT</div>
+                                        <p class="category">Programming in Java</p>
+                                        <p>Credential Id: 18AAZZZZZ4262<br>
+                                            Grade Achieved: Good <br>
+                                            <a href="https://drive.google.com/file/d/17gz3rZmcD0i1QLTi0QPFH0nmYn-VlMcS/view?usp=sharing"
                                                 target="_blank">Go
                                                 to Credential</a></p>
                                     </div>
@@ -630,7 +666,7 @@
                                                                             class="fa fa-github"></i></a>
                                                                     <a style="background-color: red"
                                                                         class="btn btn-default btn-round btn-sm btn-icon"
-                                                                        href="https://www.instagram.com/demontricer_12"
+                                                                        href="https://www.instagram.com/demontricer"
                                                                         target="_blank" rel="tooltip"
                                                                         title="Follow me on Instagram"><i
                                                                             class="fa fa-instagram"></i></a></div>
@@ -642,12 +678,12 @@
                                                 <div class="col-md-6">
                                                     <div class="card-body">
                                                         <p class="mb-0"><strong>Address </strong></p>
-                                                        <p class="pb-2">137/07, Sri Meenatchi Avenue, Kamarajar Salai,
+                                                        <p class="pb-2">137/37, Sri Meenatchi Avenue, Kamarajar Salai,
                                                             Madurai - 625009</p>
                                                         <p class="mb-0"><strong>Phone</strong></p>
                                                         <p class="pb-2">+919487746973</p>
                                                         <p class="mb-0"><strong>Email</strong></p>
-                                                        <p>vishnuraajbalasubramanian@gmail.com</p>
+                                                        <p>raajbala1999@gmail.com</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -668,7 +704,7 @@
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/now-ui-kit.js?v=1.1.0"></script>
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/scripts/main.js"></script>
-    <!--Start of Tawk.to Script-->
+    <!--Start of Tawk.to Script
     <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
@@ -680,7 +716,7 @@
     s0.parentNode.insertBefore(s1,s0);
     })();
     </script>
-    <!--End of Tawk.to Script-->
+    End of Tawk.to Script-->
 </body>
 
 </html>
