--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                             <div class="col-lg-6 col-md-12">
                                 <div class="card-body">
                                     <div class="h4 mt-0 title">About</div>
-                                    <p>Hello! I am Vishnuraaj Balasubramanian, Software Developer. I live in Madurai.I am enthusiastic about CyberSecurity and Love solve problems, provide solutions,  create & follow security guidelines so that I can ensure organization and the people in it were safe.
-                                        I have started my career in one of the SIEM Development organization which led me to be passionate in CyberSecurity. I have got oppertunities to solve security issues to ensure our SIEM tool comply with CIA Triad. 
+                                    <p>Hello! I am Vishnuraaj Balasubramanian, Software Developer. I live in Madurai.I am enthusiastic about CyberSecurity and Love solving problems, providing solutions,  creating & following security guidelines so that I can ensure the organization and the people in it are safe.
+I have started my career in one of the SIEM Development organizations which led me to be passionate in CyberSecurity. I have got opportunities to solve security issues to ensure our SIEM tool complies with the CIA Triad.  
                                     </p>
                                 </div>
                             </div>
