--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Projects</a></li>
+<!--                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Projects</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="https://drive.google.com/drive/folders/17e4qbLvtuW5J1jdx4VMOH6ylgDEW_8ru?usp=sharing">View Certificates
-                                    Certificates</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#certifications">Licenses and Certifications</a>
+                            </li>
+<!--                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#null">View Certificates
+                                    Certificates</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
                     </div>
@@ -164,12 +166,12 @@ I have started my career in one of the SIEM Development organizations which led 
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Address</strong></div>
-                                        <div class="col-sm-8">137/07, Meenatchi Avenue, Kamarajar Salai , Madurai -
+                                        <div class="col-sm-8">137/37, Meenatchi Avenue, Kamarajar Salai , Madurai -
                                             625009</div>
                                     </div>
                                     <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Language</strong></div>
-                                        <div class="col-sm-8">English, Tamil, Hindi(Reading, writing)</div>
+                                        <div class="col-sm-4"><strong class="text-uppercase">Languages</strong></div>
+                                        <div class="col-sm-8">English, Tamil</div>
                                     </div>
                                 </div>
                             </div>
@@ -275,7 +277,7 @@ I have started my career in one of the SIEM Development organizations which led 
                                 </div>
                                 <div class="col-md-6">
                                     <div class="progress-container progress-primary"><span
-                                            class="progress-badge">Machine Learning</span>
+                                            class="progress-badge">Machine Learning (Regressions)</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                                 data-aos-offset="10" data-aos-duration="2000" role="progressbar"
@@ -286,26 +288,24 @@ I have started my career in one of the SIEM Development organizations which led 
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Web
-                                            Development (PHP + MYSQL Stack)</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Cyber Security</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                                 data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-                                                style="width: 90%;"></div>
-                                            <span class="progress-value">90%</span>
+                                                aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 99%;"></div>
+                                            <span class="progress-value">99%</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Web
-                                            Development (Django + Oracle Stack)</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Information Security</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                                 data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                                aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                                style="width: 60%;"></div>
-                                            <span class="progress-value">60%</span>
+                                                aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 99%;"></div>
+                                            <span class="progress-value">99%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -313,7 +313,7 @@ I have started my career in one of the SIEM Development organizations which led 
                         </div>
                     </div>
                 </div>
-                <div class="section" id="portfolio">
+<!--                <div class="section" id="portfolio">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8 ml-auto mr-auto">
@@ -383,7 +383,7 @@ I have started my career in one of the SIEM Development organizations which led 
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="section" id="experience">
                     <div class="container cc-experience">
                         <div class="h4 text-center mb-4 title">Work Experience</div>
@@ -492,7 +492,7 @@ I have started my career in one of the SIEM Development organizations which led 
                         </div>
                     </div>
                 </div>
-                <div class="section">
+                <div class="section" id="certification">
                     <div class="container cc-education">
                         <div class="h4 text-center mb-4 title">Achievements</div>
                         <div class="card">
@@ -511,7 +511,7 @@ I have started my career in one of the SIEM Development organizations which led 
                                         <p class="category">Google</p>
                                         <p>Credential Id: WWLMVYATC8HA <br>
                                             Grade Achieved: 100%<br>
-                                            <a href="https://www.coursera.org/account/accomplishments/certificate/WWLMVYATC8HA"
+                                            <a href="https://www.coursera.org/account/accomplishments/verify/WWLMVYATC8HA"
                                                 target="_blank">Go
                                                 to Credential</a></p>
                                     </div>
