--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ I have started my career in one of the SIEM Development organizations which led 
                                 <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
                                     data-aos-duration="500">
                                     <div class="card-body cc-experience-header">
-                                        <p>February 2021 - Present</p>
+                                        <p>June 2021 - Present</p>
                                         <div class="h5">Zoho Corporation Private Limited</div>
                                     </div>
                                 </div>
@@ -417,15 +417,15 @@ I have started my career in one of the SIEM Development organizations which led 
                                 <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
                                     data-aos-duration="500">
                                     <div class="card-body cc-experience-header">
-                                        <p>December 2019</p>
-                                        <div class="h5">Zerone Corps</div>
+                                        <p>February 2021 - June 2021</p>
+                                        <div class="h5">Zoho Corporation Private Limited</div>
                                     </div>
                                 </div>
                                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                     <div class="card-body">
-                                        <div class="h5">Web Developer Intern</div>
-                                        <p class="category">Madurai</p>
-                                        <p>I have got opportunity to work on some web development projects during the internships</p>
+                                        <div class="h5">Project Trainee</div>
+                                        <p class="category">Chennai, Tamil Nadu, India</p>
+                                        <p>I have been trained under JAVA and Tomcat security, and Regulatory Compliances.</p>
                                     </div>
                                 </div>
                             </div>
