--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
                                 <div class="h2 title">Vishnuraaj Balasubramanian</div>
                                 <p class="category text-white">Software Developer</p><a
                                     class="btn btn-blue btn-round smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-                                    data-aos-anchor="data-aos-anchor">Hire Me</a><a
+                                    data-aos-anchor="data-aos-anchor">Hire Me</a>
+                                    <!--<a
                                     class="btn btn-blue smooth-scroll btn-round" href="https://docs.google.com/document/d/1pRrGYuT8Bkt6aJy45y8HdtZMRrG_XZ0TkaLrlpK8ngA/edit?usp=sharing" data-aos="zoom-in"
                                     data-aos-anchor="data-aos-anchor">Download
-                                    CV</a>
+                                    CV</a>-->
                             </div>
                         </div>
                         <div class="section">
@@ -141,40 +142,35 @@
                 <div class="container">
                     <div class="card" data-aos="fade-up" data-aos-offset="10">
                         <div class="row">
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-lg-12 col-md-12">
                                 <div class="card-body">
-                                    <div class="h4 mt-0 title">About</div>
-                                    <p>Hello! I am Vishnuraaj Balasubramanian, Software Developer. I live in Madurai.I am enthusiastic about CyberSecurity and Love solving problems, providing solutions,  creating & following security guidelines so that I can ensure the organization and the people in it are safe.
+                                    <div class="h4 mt-0 title">Hello!</div>
+                                    <p>I am Vishnuraaj Balasubramanian, Software Developer. I live in Madurai.I am enthusiastic about CyberSecurity and Love solving problems, providing solutions,  creating & following security guidelines so that I can ensure the organization and the people in it are safe.
 I have started my career in one of the SIEM Development organizations which led me to be passionate in CyberSecurity. I have got opportunities to solve security issues to ensure our SIEM tool complies with the CIA Triad.  
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-12">
+<!--                            <div class="col-lg-6 col-md-12">
                                 <div class="card-body">
                                     <div class="h4 mt-0 title">Basic Information</div>
                                     <div class="row">
                                         <div class="col-sm-4"><strong class="text-uppercase">Age</strong></div>
-                                        <div class="col-sm-8">21</div>
+                                        <div class="col-sm-8">23</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Email</strong></div>
-                                        <div class="col-sm-8">vishnuraajbalasubramanian@gmail.com</div>
+                                        <div class="col-sm-8">raajbala1999@gmail.com</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Phone</strong></div>
                                         <div class="col-sm-8">+919487746973</div>
                                     </div>
                                     <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Address</strong></div>
-                                        <div class="col-sm-8">137/37, Meenatchi Avenue, Kamarajar Salai , Madurai -
-                                            625009</div>
-                                    </div>
-                                    <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Languages</strong></div>
                                         <div class="col-sm-8">English, Tamil</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -492,7 +488,7 @@ I have started my career in one of the SIEM Development organizations which led 
                         </div>
                     </div>
                 </div>
-                <div class="section" id="certification">
+                <div class="section" id="certifications">
                     <div class="container cc-education">
                         <div class="h4 text-center mb-4 title">Achievements</div>
                         <div class="card">
@@ -677,9 +673,6 @@ I have started my career in one of the SIEM Development organizations which led 
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="card-body">
-                                                        <p class="mb-0"><strong>Address </strong></p>
-                                                        <p class="pb-2">137/37, Sri Meenatchi Avenue, Kamarajar Salai,
-                                                            Madurai - 625009</p>
                                                         <p class="mb-0"><strong>Phone</strong></p>
                                                         <p class="pb-2">+919487746973</p>
                                                         <p class="mb-0"><strong>Email</strong></p>
