--- a/index.html
+++ b/index.html
@@ -626,8 +626,8 @@ I have started my career in one of the SIEM Development organizations which led 
                                                             <div class="col">
                                                                 <a style="font-size: 24px"
                                                                     class="btn btn-primary btn-round btn-block"
-                                                                    href="mailto:vishnuraajbalasubramanian@gmail.com?cc=raajbala1999@gmail.com, subject=REF:BLOG SUB: Contact&body=Hi Vishnuraaj {your Message here}"
-                                                                    role="button">Send<i class='fa fa-envelope'></i></a>
+                                                                    href="mailto:raajbala1999@gmail.com?cc=vishnuraajbalasubramanian@gmail.com, subject=REF:BLOG SUB: Contact&body=Hi Vishnuraaj {your Message here}"
+                                                                    role="button">Send&nbsp;&nbsp;<i class='fa fa-envelope'></i></a>
                                                             </div>
                                                         </div>
                                                         <br>
