--- a/index.html
+++ b/index.html
@@ -57,13 +57,10 @@
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-<!--                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Projects</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a>
                             </li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#certifications">Licenses and Certifications</a>
                             </li>
-<!--                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#null">View Certificates
-                                    Certificates</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
                     </div>
@@ -89,10 +86,7 @@
                                 <p class="category text-white">Software Developer</p><a
                                     class="btn btn-blue btn-round smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                                     data-aos-anchor="data-aos-anchor">Hire Me</a>
-                                    <!--<a
-                                    class="btn btn-blue smooth-scroll btn-round" href="https://docs.google.com/document/d/1pRrGYuT8Bkt6aJy45y8HdtZMRrG_XZ0TkaLrlpK8ngA/edit?usp=sharing" data-aos="zoom-in"
-                                    data-aos-anchor="data-aos-anchor">Download
-                                    CV</a>-->
+
                             </div>
                         </div>
                         <div class="section">
@@ -151,27 +145,6 @@ I have started my career in one of the SIEM Development organizations which led 
                                     </p>
                                 </div>
                             </div>
-<!--                            <div class="col-lg-6 col-md-12">
-                                <div class="card-body">
-                                    <div class="h4 mt-0 title">Basic Information</div>
-                                    <div class="row">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Age</strong></div>
-                                        <div class="col-sm-8">23</div>
-                                    </div>
-                                    <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Email</strong></div>
-                                        <div class="col-sm-8">raajbala1999@gmail.com</div>
-                                    </div>
-                                    <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Phone</strong></div>
-                                        <div class="col-sm-8">+919487746973</div>
-                                    </div>
-                                    <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Languages</strong></div>
-                                        <div class="col-sm-8">English, Tamil</div>
-                                    </div>
-                                </div>
-                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -310,77 +283,6 @@ I have started my career in one of the SIEM Development organizations which led 
                         </div>
                     </div>
                 </div>
-<!--                <div class="section" id="portfolio">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-8 ml-auto mr-auto">
-                                <div class="h4 text-center mb-4 title">Projects</div>
-                                <div class="nav-align-center">
-                                    <ul class="nav nav-pills nav-pills-primary" role="tablist">
-                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab"
-                                                href="#developer" role="tablist"><i class="fa fa-laptop"
-                                                    aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-content gallery mt-5">
-                            <div class="tab-pane active" id="web-development">
-                                <div class="ml-auto mr-auto">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="#Being Updated">
-                                                    <figure class="cc-effect"><img src="images/logo.webp"
-                                                            alt="Image" />
-                                                        <figcaption>
-                                                            <div class="h4">Url Shortner</div>
-                                                            <p>Web Development</p>
-                                                        </figcaption>
-                                                    </figure>
-                                                </a></div>
-                                            <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://masterflow-dem.000webhostapp.com">
-                                                    <figure class="cc-effect"><img src="images/masterflow.png"
-                                                            alt="Image" />
-                                                        <figcaption>
-                                                            <div class="h4">Masterflow - Workflow Automation</div>
-                                                            <p>Web Development</p>
-                                                        </figcaption>
-                                                    </figure>
-                                                </a></div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a target="_blank"
-                                                    href="#BeingUpdated">
-                                                    <figure class="cc-effect"><img src="images/dtlogo.png"
-                                                            alt="Image" />
-                                                        <figcaption>
-                                                            <div class="h4">DT - QR Code Generator
-                                                            </div>
-                                                            <p>Windows GUI Application</p>
-                                                        </figcaption>
-                                                    </figure>
-                                                </a></div>
-                                            <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a target="_blank"
-                                                    href="https://demontricerz.github.io/vishnuraajbalasubramanian/windows/Attendance%20Accumulator%20-%20Vishnuraaj%20balasubramanian.exe">
-                                                    <figure class="cc-effect"><img src="images/teams.png"
-                                                            alt="Image" />
-                                                        <figcaption>
-                                                            <div class="h4">DT - Attendance Accumulator</div>
-                                                            <p>Windows GUI Development</p>
-                                                        </figcaption>
-                                                    </figure>
-                                                </a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
                 <div class="section" id="experience">
                     <div class="container cc-experience">
                         <div class="h4 text-center mb-4 title">Work Experience</div>
@@ -633,7 +535,7 @@ I have started my career in one of the SIEM Development organizations which led 
                                                         </div>
                                                         <br>
                                                         <div style="text-align: center"><strong>Or</strong></div>
-                                                        <div style="background-color: rgb(255, 255, 255);text-align: center"
+                                                        <div style="background-color: rgb(255, 255, 255);text-align: center;padding-top: 20px;"
                                                             class="section">
                                                             <div class="container">
                                                                 <div class="button-container">
@@ -698,19 +600,6 @@ I have started my career in one of the SIEM Development organizations which led 
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/now-ui-kit.js?v=1.1.0"></script>
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/scripts/main.js"></script>
-    <!--Start of Tawk.to Script
-    <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5ff57faaa9a34e36b969922d/1erbfld8p';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    End of Tawk.to Script-->
 </body>
 
 </html>
