--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#certifications">Licenses and Certifications</a>
-                            </li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#certifications">Licenses and Certifications</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
                     </div>
@@ -331,7 +330,7 @@ I have started my career in one of the SIEM Development organizations which led 
                         </div>
                     </div>
                 </div>
-                <div class="section">
+                <div class="section" id="education">
                     <div class="container cc-education">
                         <div class="h4 text-center mb-4 title">Education</div>
                         <div class="card">
@@ -393,7 +392,7 @@ I have started my career in one of the SIEM Development organizations which led 
                 </div>
                 <div class="section" id="certifications">
                     <div class="container cc-education">
-                        <div class="h4 text-center mb-4 title">Achievements</div>
+                        <div class="h4 text-center mb-4 title">Licenses and Certifications</div>
                         <div class="card">
                             <div class="row">
                                 <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
