--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="wrapper">
                     <div class="page-header page-header-small" filter-color="green">
                         <div class="page-header-image" data-parallax="true"
-                            style="background-image: url('https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/cc-bg-1.jpg');">
+                            style="background-image: url('https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/bg-image.webp');">
                         </div>
                         <div class="container">
                             <div class="content-center">
